--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
   "dependencies": {
-    "express": "^4.18.2"
-  }
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "dev": "nodemon app.js"
+  },
+  "name": "desafio",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Leonel0711/Desafios_Backend_Vasquez.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Leonel0711/Desafios_Backend_Vasquez/issues"
+  },
+  "homepage": "https://github.com/Leonel0711/Desafios_Backend_Vasquez#readme",
+  "description": ""
 }
