--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "express-handlebars": "^6.0.6",
+    "pug": "^3.0.2"
   },
   "scripts": {
     "dev": "nodemon app.js"
@@ -9,13 +11,15 @@
   "name": "desafio",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Leonel0711/Desafios_Backend_Vasquez.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Lucas Vasquez",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Leonel0711/Desafios_Backend_Vasquez/issues"
