--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
-    "pug": "^3.0.2"
+    "moment": "^2.29.4",
+    "pug": "^3.0.2",
+    "socket.io": "^4.5.3"
   },
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon ./src/app.js"
   },
   "name": "desafio",
   "version": "1.0.0",
