--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.3.0",
+    "mariadb": "^3.0.2",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "pug": "^3.0.2",
-    "socket.io": "^4.5.3"
+    "socket.io": "^4.5.3",
+    "sqlite3": "^5.1.2"
   },
   "scripts": {
     "dev": "nodemon ./src/app.js"
